packages/taquito-michel-codec/test/contracts_015/ill_typed/stack_bottom_undup2able.tz
parameter unit;
storage unit;
code {
       DUP 2;
     }
